@@ -77,7 +77,14 @@ If desired, it is possible to run the database (MongoDB) and Solr as docker cont
 
 1. Run
 
+    
     ```
+    export DENCITY_HOST_URL = newsite.url.org
+    
+    # if you need email, then setup mailgun and add in your mailgun smtp user and api key
+    export MAILGUN_SMTP_LOGIN = login
+    export MAILGUN_API_KEY = key
+    
     docker-compose up
 
     # to populate db (first time only)
@@ -89,13 +96,20 @@ If desired, it is possible to run the database (MongoDB) and Solr as docker cont
     # point browser to boot2docker ip (or system ip) port 8080.
     ```
 
-## Docker deployment
+## Deployment with AWS ElasticBeanstalk
 
-1. `docker build -t nlong/dencity-1 .`
-1. Test locally by calling `docker run -p 80:80 nlong/dencity-1`
-1. Point browser to $DOCKER_HOST IP (if using boot2docker) (e.g. http://192.168.59.103)
-1. If you are ready to deploy then make sure commit your changes locally.
+These instructions only work with Docker on AWS' ElasticBeanstalk (EB) Environment. 
+ 
+1. Make sure you commit your changes locally (EB will use your current Github commit)
+1. Setup Python (use brew), pip, [EB cli](http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/eb-cli3-getting-set-up.html) and [AWS cli](http://docs.aws.amazon.com/cli/latest/userguide/cli-chap-getting-set-up.html)
+1. Set the in the Dockerfile and the /config/puma.rb (this should already be done)
+1. eb create NAME_OF_ENVIRONMENT or eb deploy NAME_OF_ENVIRONMENT.  *Note elastic beanstalk environments are specified here: https://github.com/NREL/cofee-rails/blob/develop/.elasticbeanstalk/config.yml*
+1. Note that you must set a few environment variables for the EB environment
+    * JRUBY_OPTS = --server -J-Xms1024m -J-Xmx1500m -J-XX:+UseConcMarkSweepGC -J-XX:-UseGCOverheadLimit -J-XX:+CMSClassUnloadingEnabled
+    * RAILS_ENV = production
+    * MAILGUN_SMTP_LOGIN = smtp_from_mailgun
+    * MAILGUN_API_KEY = key_from_mailgun
+1. Redeploy if the environment variables have changed
 
-1. Upload the Zip to EB
 
-## Deploying to Elastic Beanstalk
+
